--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <java.version>1.8</java.version>
         <!-- The main class to start by executing java -jar -->
-        <start-class>com.logicbig.example.Main</start-class>
+        <start-class>com.logicbig.Main</start-class>
     </properties>
 
     <dependencies>
